@@ -4,7 +4,6 @@
 from zope.component import getMultiAdapter
 from zope.contentprovider.interfaces import IContentProvider
 
-from App.Common import rfc1123_date
 from DateTime import DateTime
 from AccessControl import Unauthorized
 from zope.interface.verify import verifyObject
@@ -956,8 +955,8 @@ class TestDebugMode(FunctionalRegistryTestCase):
         self.tool.setDebugMode(True)
         # Publish in debug mode
         response = self.publish(self.toolpath+'/ham')
-        self.assertNotEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(now.timeTime()))
+        self.assertExpiresNotEqual(response.getHeader('Expires'), soon.timeTime())
+        self.assertExpiresEqual(response.getHeader('Expires'), now.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=0')
 
 
@@ -1079,7 +1078,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1088,7 +1087,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
     def testCachingHeadersFromSkin(self):
@@ -1101,7 +1100,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1110,7 +1109,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
     def testCachingHeadersFromToolWithRAMCache(self):
@@ -1124,7 +1123,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1133,7 +1132,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
     def testCachingHeadersFromSkinWithRAMCache(self):
@@ -1149,7 +1148,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1158,7 +1157,7 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertExpiresEqual(response.getHeader('Expires'), soon.timeTime())
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
 class TestBundling(RegistryTestCase):
